[Yuval] : testfx unit testing fixed